# PsTuts-VQA-Data-Operations

./: .gitignore  DEVELOPER.md  README.md  bulk_create.ipynb  create_golden_dataset.ipynb  create_golden_dataset.py  loader.py  main.py  pyproject.toml
