[project]
name = "pstuts-vqa-data-operations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Marko Budisic", email = "mbudisic@gmail.com" }]
license = "MIT"

dependencies = [
    "python-dotenv",
    "ragas",
    "langchain_openai",
    "huggingface_hub",
    "langchain_core",
    "aiofiles",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "iprogress>=0.4",
    "rapidfuzz>=3.13.0",
    "ipywidgets>=8.1.7",
    "sentence-transformers>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "isort>=6.0.1",
    "pylint-venv>=3.0.4",
    "ipdb>=0.13.13",
    "deptry>=0.23.0",
]

web = [
    "fastapi>=0.115.3,<0.116",
    "uvicorn>=0.25.0,<0.26.0",
    "python-multipart>=0.0.18,<0.0.19",
    "websockets==14.2",
    "httpx==0.27.0",
]

extras = [
    "numpy==2.2.2",
    "ragas>=0.2.15",
    "tavily-python>=0.7.2",
]

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.mypy]
ignore_errors = true

[tool.flake8]
application-import-names = "pstuts_rag"
extend-ignore = "E203,W503"

[tool.pylint.MASTER]
load-plugins      = "pylint_venv"          # optional but handy
source-roots      = "pstuts_rag"
extension-pkg-allow-list = "numpy, torch"  # compiled deps that astroid cannot parse

[tool.pylint.TYPECHECK]
ignored-modules   = "pkg_resources"        # suppress noisy vendored imports

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Jupyter packages
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyter-contrib-nbextensions",
    # Development packages
    "pytest",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pylint-venv",
    "ipdb",
    "deptry",
    # Web packages
    "fastapi",
    "uvicorn",
    "python-multipart",
    "websockets",
    "httpx",
    # Other packages
    "numpy",
    "tavily-python",
]
DEP003 = [
    "huggingface_hub",
    "setuptools",
]
